# Migration_Accelator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: flow_ui.py  offline_convert.py  repo_cache.py  streamlit_app.py
bundles/alteryx_use_case_workflow/: databricks.yml
bundles/alteryx_use_case_workflow/src/: Alteryx_Use_Case_Workflow.py
bundles/fnprmt_prod_neba_bom_info_gcp/: databricks.yml
bundles/fnprmt_prod_neba_bom_info_gcp/src/: FNPRMT-PROD-NEBA-BOM-INFO_GCP.py
bundles/fnprmt_with_macros_sdp/: databricks.yml
bundles/fnprmt_with_macros_sdp/src/: FNPRMT-PROD-NEBA-BOM-INFO_GCP.py  fnprmt_prod_neba_bom_info_gcp_utils.py
bundles/ls_certifications_dev_load/: databricks.yml
bundles/ls_certifications_dev_load/src/: LS_Certifications_DEV_Load.py  ls_certifications_dev_load_utils.py
bundles/sales_summary/: databricks.yml
bundles/sales_summary/src/: sales_summary.py
bundles/w3/: databricks.yml  sample_data.sql
bundles/w3/src/: W3.py
configs/: deploy.yaml  loader.py  models.py  target.yaml
convert/: expr.py  io_map.py  renderer.py  router.py  spec.py
deploy/: dab.py  dbsql.py  export.py  gitops.py  models.py
eval/: medallion.py  parity.py  schema.py  static_checks.py  synthetic.py
feedback/: store.py
functions/: registry.py
functions/pyspark_lib/: common.py
functions/sql_lib/: __init__.py
ingest/alteryx/: ir.py  parser.py
knowledge/: alteryx_tools.py
llm/: client.py  convert.py  prompt_builder.py  recommend.py  repair.py
llm/prompts/: alteryx_to_pyspark.j2  repair_spec.j2
repo/: graph.py  metadata.py  store.py
tests/app/: test_anchor_conversion.py  test_bugfixes.py  test_flow_ui.py  test_macro_inlining.py  test_repo_cache.py
tests/convert/: test_expr.py  test_io_map.py  test_renderer.py  test_router.py
tests/deploy/: test_dab.py  test_dbsql.py  test_deploy_validate.py  test_export.py  test_gitops.py
tests/eval/: test_synthetic_and_parity.py
tests/feedback/: test_store.py
tests/fixtures/alteryx/: normalize_names.yxmc  region_dedupe.yxmd  sales_summary.yxmd
tests/functions/: conftest.py  test_common.py
tests/ingest/: test_alteryx_parser.py  test_multi_formula.py  test_output_mode.py
tests/knowledge/: test_alteryx_tools.py
tests/llm/: test_prompt_and_convert.py  test_recommend.py  test_repair.py
tests/repo/: test_store_and_graph.py
