[project]
name = "migration-accelerator"
version = "0.1.0"
description = "LLM-based legacy-to-Databricks migration accelerator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "structlog>=24.1",
    "networkx>=3.2",
    "jinja2>=3.1",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
    "pre-commit>=3.7",
]
spark = [
    "pyspark>=3.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingest*", "repo*", "llm*", "convert*", "functions*", "eval*", "deploy*", "feedback*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/fixtures"]
