[project]
name = "migration-accelerator"
version = "0.1.0"
description = "LLM-based legacy-to-Databricks migration accelerator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "structlog>=24.1",
    "networkx>=3.2",
    "jinja2>=3.1",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
    "pre-commit>=3.7",
]
spark = [
    "pyspark>=3.5",
]
app = [
    "streamlit>=1.35",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingest*", "repo*", "llm*", "convert*", "functions*", "eval*", "deploy*", "feedback*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
# bundles/ holds generated deployment artifacts (notebooks reference the
# ambient `spark` session); they are rendered, not written, so not linted.
extend-exclude = ["bundles"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Streamlit entrypoint needs sys.path set up before importing project packages.
"app/streamlit_app.py" = ["E402"]

[tool.mypy]
# Kept >= numpy's stub floor (PEP 695 `type` statements need 3.12 to parse)
# even though requires-python is ">=3.11" -- numpy is a transitive dep via
# streamlit/pyspark -> pandas, not something first-party code relies on
# 3.12-only syntax for.
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/fixtures", "\\.venv", "bundles"]
